[FIX] qrcode dependencie

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -29,9 +29,11 @@ eggs = nose
        unicodecsv
        watchdog
        passlib
+       qrcode
 
 openerp_scripts = nosetests=nosetests command-line-options=-d
 
 [versions]
 pydot = 1.0.28
 python-dateutil = 2.4.0
+qrcode = 5.3
